<resources>
    <string name="app_name">CalculatorPlus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_result">Result</string>
    <string name="menu_number">Number</string>
    <string name="menu_number_edit">NumberEdit</string>
    <string name="menu_member">Member</string>
    <string name="menu_member_edit">MemberEdit</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>