<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_result">

    <fragment
            android:id="@+id/nav_result"
            android:name="com.example.calculatorplus.ui.result.ResultFragment"
            android:label="@string/menu_result"
            tools:layout="@layout/fragment_result"/>

    <fragment
            android:id="@+id/nav_number"
            android:name="com.example.calculatorplus.ui.number.NumberFragment"
            android:label="@string/menu_number"
            tools:layout="@layout/fragment_number"/>

    <fragment
            android:id="@+id/nav_member"
            android:name="com.example.calculatorplus.ui.member.MemberFragment"
            android:label="@string/menu_member"
            tools:layout="@layout/fragment_member"/>

    <fragment
            android:id="@+id/nav_home"
            android:name="com.example.calculatorplus.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/nav_gallery"
            android:name="com.example.calculatorplus.ui.gallery.GalleryFragment"
            android:label="@string/menu_gallery"
            tools:layout="@layout/fragment_gallery"/>

    <fragment
            android:id="@+id/nav_slideshow"
            android:name="com.example.calculatorplus.ui.slideshow.SlideshowFragment"
            android:label="@string/menu_slideshow"
            tools:layout="@layout/fragment_slideshow"/>
</navigation>